# synchronized

./: Cargo.toml  README.md  build.rs
.github/workflows/: CI.yml
examples/: point.rs  point_let.rs  sync.rs  sync_let.rs  sync_static.rs
src/: async_core.rs  cfg.rs  core.rs  lib.rs  macro_features.rs  point.rs
src/beh/: async.rs  mod.rs  pl.rs  std.rs
src/core/: async.rs  mod.rs
tests/: macro.rs
